make ready for cpanel linux hosting

--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="/icon.png">
+  <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css" type="text/css">
+  <link rel="stylesheet" href="normalize.css">
+  <link rel="stylesheet" href="main.css" type="text/css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
     <div class="App">
       <header class="App-header">
         <div>
-          <img src='./img/banner.svg' class="App-banner" alt="banner logo"/>
+          <img src='banner.svg' class="App-banner" alt="banner logo"/>
         </div>
         
         <nav>
@@ -48,10 +48,10 @@
             <li><a href='#faqs'>FAQs</a></li>
           </ul>
           <ul class='App-header-icons'>
-            <li><a href='https://twitter.com/Waffle_Pals'><img src='./img/twitter.svg' alt="twitter icon"/></a></li>
-            <li><a href='https://discord.gg/n6c7vDf5'><img src='./img/discord.svg' alt="discord icon"/></a></li>
-            <li><a href='https://opensea.io/collection/wafflepals'><img src='./img/opensea.svg' alt="opensea icon"/></a></li>
-            <li><a href='https://instagram.com/waffle_pals'><img src='./img/instagram.svg' alt="instagram icon"/></a></li>
+            <li><a href='https://twitter.com/Waffle_Pals'><img src='twitter.svg' alt="twitter icon"/></a></li>
+            <li><a href='https://discord.gg/n6c7vDf5'><img src='discord.svg' alt="discord icon"/></a></li>
+            <li><a href='https://opensea.io/collection/wafflepals'><img src='opensea.svg' alt="opensea icon"/></a></li>
+            <li><a href='https://instagram.com/waffle_pals'><img src='instagram.svg' alt="instagram icon"/></a></li>
           </ul>
         </nav>
       </header>
@@ -63,7 +63,7 @@
             <p>Thousands of tasty Waffle Pals feeding and entertaining the world.</p>
             <p>Coming soon to the Etherum blockchain!</p>
           </article>
-          <img src='./img/hero.svg' alt="hero image"/>
+          <img src='hero.svg' alt="hero image"/>
         </section>
   
         <section class='App-about' id='about'>
@@ -76,35 +76,35 @@
   
         <section class='App-roadmap' id='roadmap'>
           <h2>our recipe</h2>
-          <img src='./img/roadmap.png' alt='The Recipe!'/>
+          <img src='roadmap.png' alt='The Recipe!'/>
         </section>
   
         <section class='App-team' id='team'>
           <h2>the waffle makers</h2>
   
           <article>
-            <a href='https://twitter.com/asaspades_eth'><img src='./img/asa.svg' alt='Asa PFP'/></a>
+            <a href='https://twitter.com/asaspades_eth'><img src='asa.svg' alt='Asa PFP'/></a>
             <h3>ASA__SPADES</h3>
             <h4>Co-founder & Operations</h4>
             <h4><a href='https://twitter.com/asaspades_eth'>@asaspades_eth</a></h4>
           </article>
           
           <article>
-            <a href='https://twitter.com/gimo_ill'><img src='./img/gimo.svg' alt='Gimo PFP'/></a>
+            <a href='https://twitter.com/gimo_ill'><img src='gimo.svg' alt='Gimo PFP'/></a>
             <h3>GIMO</h3>
             <h4>Co-founder & Artist</h4>
             <h4><a href='https://twitter.com/gimo_ill'>@gimo_ill</a></h4>
           </article>
   
           <article>
-            <a href='https://twitter.com/globzki'><img src='./img/glo.svg' alt='Glo PFP'/></a>
+            <a href='https://twitter.com/globzki'><img src='glo.svg' alt='Glo PFP'/></a>
             <h3>GLO</h3>
             <h4>Waffle Staff</h4>
             <h4><a href='https://twitter.com/globzki'>@globzki</a></h4>
           </article>
   
           <article>
-            <a href='https://twitter.com/0xGroovy'><img src='./img/groovy.svg' alt='Groovy PFP'/></a>
+            <a href='https://twitter.com/0xGroovy'><img src='groovy.svg' alt='Groovy PFP'/></a>
             <h3>0xGROOVY</h3>
             <h4>Waffle Staff</h4>
             <h4><a href='https://twitter.com/0xGroovy'>@0xGroovy</a></h4>
@@ -145,7 +145,7 @@
   
       </main>
       <footer class="App-footer">
-        <img src='./img/footer-fruit.svg' alt='footer fruit'/>
+        <img src='footer-fruit.svg' alt='footer fruit'/>
         2022 GIMO Studios, All Rights Reserved
       </footer>
     </div>
